--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,17 @@
 {
-    "name": "ft-source-grid",
-    "description": "An element that renders a list of FileThis source items in a grid layout.",
-    "main": "ft-source-grid.html",
-    "dependencies": {
-        "polymer": "Polymer/polymer#^1.4.0"
-    },
-    "devDependencies": {
-        "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-        "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
-        "web-component-tester": "^4.0.0",
-        "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
-    }
+  "name": "ft-source-grid",
+  "description": "An element that renders a list of FileThis source items in a grid layout.",
+  "main": "ft-source-grid.html",
+  "dependencies": {
+    "polymer": "Polymer/polymer#^1.4.0",
+    "ft-source-grid-item": "filethis/ft-source-grid-item#^0.0.1",
+    "iron-list": "PolymerElements/iron-list#^1.4.5",
+    "array-filter": "43081j/array-filter#^1.0.2"
+  },
+  "devDependencies": {
+    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
+    "web-component-tester": "^4.0.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
+  }
 }
