--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "description": "An element that renders a list of FileThis source items in a grid layout.",
   "main": "ft-source-grid.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.9.1",
+    "polymer": "Polymer/polymer#^2.0.1",
     "ft-source-grid-item": "filethis/ft-source-grid-item#^0.0.5",
     "iron-list": "PolymerElements/iron-list#^2.0.0",
     "array-filter": "43081j/array-filter#^1.0.2"
@@ -12,9 +12,10 @@
     "iron-component-page": "PolymerElements/iron-component-page#^2.0.0",
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
     "web-component-tester": "^4.0.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.1"
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0"
   },
   "resolutions": {
-    "webcomponentsjs": "^1.0.1"
+    "polymer": "^2.0.1",
+    "webcomponentsjs": "^v1.0.0"
   }
 }
