--- a/bower.json
+++ b/bower.json
@@ -5,8 +5,7 @@
   "dependencies": {
     "polymer": "Polymer/polymer#^2.0.1",
     "ft-source-grid-item": "filethis/ft-source-grid-item#^0.0.6",
-    "iron-list": "PolymerElements/iron-list#^2.0.0",
-    "array-filter": "43081j/array-filter#^1.0.2"
+    "iron-list": "PolymerElements/iron-list#^2.0.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^2.0.0",
