--- a/bower.json
+++ b/bower.json
@@ -3,18 +3,19 @@
   "description": "An element that renders a list of FileThis source items in a grid layout.",
   "main": "ft-source-grid.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.0.1",
     "ft-source-grid-item": "filethis/ft-source-grid-item#^0.0.6",
-    "iron-list": "PolymerElements/iron-list#^2.0.0"
+    "iron-list": "PolymerElements/iron-list#1 - 2",
+    "polymer": "Polymer/polymer#1.9 - 2"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#^2.0.0",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
-    "web-component-tester": "^4.0.0",
+    "iron-component-page": "PolymerElements/iron-component-page#1 - 2",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#1 - 2",
+    "iron-test-helpers": "PolymerElements/iron-test-helpers#1 - 2",
+    "web-component-tester": "^6.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0"
   },
   "resolutions": {
-    "polymer": "^2.0.1",
-    "webcomponentsjs": "^v1.0.0"
+    "polymer": "1.9 - 2",
+    "webcomponentsjs": "^1.0.0"
   }
 }
