--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "description": "An element that renders a list of FileThis source items in a grid layout.",
   "main": "ft-source-grid.html",
   "dependencies": {
-    "ft-source-grid-item": "filethis/ft-source-grid-item#^0.0.8",
+    "ft-source-grid-item": "filethis/ft-source-grid-item#^$NEW_VERSION",
     "iron-list": "PolymerElements/iron-list#1 - 2",
     "polymer": "Polymer/polymer#1.9 - 2"
   },
